# AI-Query-Tube

./: .env.example  .gitignore  AI query tube  AI query tube final result.ipynb  AI query tube.ipynb  AI querytube final result.ipynb  AI_Query.ipynb  AI_QueryTube (1).ipynb  AI_QueryTube.ipynb  AI_QueryTubeipynb (1).ipynb  AI_QueryTubeipynb.ipynb  AI_Query_Tube.ipynb  AI_Query_Tube_Search.ipynb  AI_Query_Tube__.ipynb  AI_Query_tube.ipynb  BRANCH_CREATED.md  Devesh_notebooks.ipynb  Devesh_transcript_extraction.ipynb  Dockerfile  Final.ipynb  LICENSE  Milestone1.ipynb  QueryTube _ Semantic Search.html  QueryTube.ipynb  QueryTube_Final.ipynb  Query_Tube_Final.ipynb  README.md  Scriptt.js  SemanticAI_QueryTube.ipynb  Untitled0.ipynb  ai_query_tube (1).py  ai_query_tube.py  colorAnsStyle.css  config  create_dummy_data.py  debug_output.txt  debug_transcript.py  devesh_notebook.ipynb  final.ipynb  final_output.ipynb  (+24 more)
AI-QueryTube/: index.html  main.py  script.js  style.css
Final Project as per Guidelines/: Main_Code.ipynb  project_summary.txt  youtube_data_with_transcripts.csv  youtube_metadata.csv  youtube_video_index.csv  youtube_video_metadata_final.csv
Guided Version Project/: index.html  main.py  script.js  style.css  youtube_metadata.csv
INFOSYS/: YouTube_Channel_Search_Tutorial.ipynb  YouTube_Search_Model.ipynb  streamlit_app.py
assets/: sample_queries.txt
backend/: cache.py  embeddings.py  main.py  requirements.txt  transcripts.py  youtube_search.py
docs/: architecture.md  evaluation_results.md
frontend/: package-lock.json  package.json
src/: app.py  (+4 more)
(+36 files in other folders)
